🐌 Fix inline-break in table-block

--- a/src/styles/notion-block.module.css
+++ b/src/styles/notion-block.module.css
@@ -124,7 +124,7 @@ a.heading {
 }
 .table th,
 .table td {
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .columnList {
